# kit-core

./: Cargo.toml  README.md
docs/: kit-contract-publish-prd.md  kit-plan-status-prd.md  kit-plugin-status-prd.md  kit-scenarios-prd.md  start-feature-refactor.md
src/: contract.rs  contracts.rs  envelope.rs  git.rs  lockfile.rs  main.rs  plan_status.rs  plugin_status.rs  scenarios.rs  scenarios_yaml.rs
tests/: contract.rs  contracts.rs  plan_status.rs  plugin_status.rs  scenarios.rs
tests/common/: mod.rs
