[package]
name = "kit"
version = "0.1.0"
edition = "2021"
description = "Universal binary used by *kit language plugins"

[[bin]]
name = "kit"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
openapiv3 = "2"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
